legend-pure-rust/crates/parser/tests/snapshots/test_profile__quoted.snap
---
source: crates/parser/tests/test_profile.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Profile(
                    ProfileDef {
                        package: Some(
                            Package {
                                name: "profiles",
                                parent: Some(
                                    Package {
                                        name: "pure",
                                        parent: Some(
                                            Package {
                                                name: "meta",
                                                parent: None,
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 9,
                                                    end_line: 2,
                                                    end_column: 12,
                                                },
                                            },
                                        ),
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 15,
                                            end_line: 2,
                                            end_column: 18,
                                        },
                                    },
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 21,
                                    end_line: 2,
                                    end_column: 28,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "'with quotes'",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 31,
                                end_line: 2,
                                end_column: 43,
                            },
                        },
                        stereotype_names: [
                            SpannedString {
                                value: "deprecated",
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 4,
                                    start_column: 19,
                                    end_line: 4,
                                    end_column: 28,
                                },
                            },
                        ],
                        tag_names: [
                            SpannedString {
                                value: "doc",
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 5,
                                    start_column: 12,
                                    end_line: 5,
                                    end_column: 14,
                                },
                            },
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 6,
                            end_column: 1,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
